[B]Version 1.3.1 (Oct 13, 2012)[/B]
- Added "Watch (Streamed)" context menu item which enables playing back via using SageTV remote services
- Fixed file/watched duration issue where "None" wasn't handled

[B]Version 1.3.0 (Oct 9, 2012)[/B]
- Added support for playing back recordings that have multiple segments (using stack://)

[B]Version 1.2.12 (Oct 8, 2012)[/B]
- Added "Add Favorite" context menu item (for airings and searches)

[B]Version 1.2.11 (Oct 8, 2012)[/B]
- Added "Delete/Wrong Recording" context menu item

[B]Version 1.2.10 (Oct 8, 2012)[/B]
- Added "Delete/Set Watched", "Delete/Clear Watched", and "Delete/Don't Like" context menu items

[B]Version 1.2.9 (Oct 8, 2012)[/B]
- Added "Archive" context menu item

[B]Version 1.2.8 (Oct 8, 2012)[/B]
- Added support for playing back recordings that have multiple segments
- Added "Set Watched" and "Clear Watched" context menu items

[B]Version 1.2.7 (Oct 5, 2012)[/B]
- Added support for background fanart

[B]Version 1.2.6 (Oct 1, 2012)[/B]
- Updated playback path settings to require you to browse for it vs. free-text to ensure the path that is used for live TV playback is correctly formatted
- Added resume/partially watched support (e.g. if you've started to watch a show in SageTV, XBMC will know this and prompt you if you want to resume at the same point in SageTV); note that this does NOT sync the progress or watched status from XBMC back to SageTV

[B]Version 1.2.5 (Sep 25, 2012)[/B]
- Workaround added for network path issues for LiveTV playback (for now)

[B]Version 1.2.4 (Sep 25, 2012)[/B]
- Fixed WOL support
- Added sorting by date to "Watch Recordings"
- Fixed local -> network path substitutions
- Changed "UNC path" to "Network path" in settings

[B]Version 1.2.3 (Sep 24, 2012)[/B]
- Added WOL support

[B]Version 1.2.2 (Sep 20, 2012)[/B]
- Fixed issue with live TV playing back w/ UNC path