@@ -1,3 +1,6 @@
+[B]Version 1.3.2 (Oct 16, 2012)[/B]
+- Added show level context menu items to enable "Set All Watched", "Clear All Watched", and "Delete All" which takes action on all episodes within a show
+
 [B]Version 1.3.1 (Oct 13, 2012)[/B]
 - Added "Watch (Streamed)" context menu item which enables playing back via using SageTV remote services
 - Fixed file/watched duration issue where "None" wasn't handled
